<resources>
    <string name="app_name">Pspot take 7</string>
    <string name="create_account">Create Account</string>
    <string name="get_started">Get Started</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_to_car_parking_app_nbook_a_slot_in_advance">Welcome to Car Parking App\nBook a slot in Advance</string>
    <string name="choose_your_slot">Choose your slot</string>
    <string name="booking_form">Booking Form</string>
    <string name="book">Book</string>
    <string name="date">Date</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="name">Name</string>
    <string name="back_to_home">Back to Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_3">Slot 3</string>
    <string name="slot_4">Slot 4</string>
    <string name="slot_5">Slot 5</string>
    <string name="slot_6">Slot 6</string>
    <string name="choose_your_slot_">Choose your slot</string>
    <string name="car_logo">car logo</string>
    <string name="car_logo_2">car logo 2</string>
    <string name="car_logo_3">car logo 3</string>
    <string name="car_logo_4">car logo 4</string>
    <string name="car_logo_5">car logo 5</string>
    <string name="car_logo_6">car logo 6</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="login_">Login</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="menu_open">Open</string>
    <string name="close_menu">Close</string>
    <string name="slot_number">Slot Number</string>
    <string name="slot_number_">Slot Number</string>
    <string name="book_a_slot">Book a slot</string>
    <string name="go_back">go back</string>
    <string name="back">back</string>
    <string name="scan_qr">Scan QR</string>
    <string name="book__">Book</string>

</resources>